--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,5 @@
 @import "blocks/main-nav.css";
 @import "blocks/hero.css";
 @import "blocks/btn.css";
+@import "blocks/about-company.css";
+@import "blocks/aside-nav.css";
