--- a/css/blocks/btn.css
+++ b/css/blocks/btn.css
@@ -1,13 +1,21 @@
-.btn--size--xl {
-    display: block;
-  padding: 30px;
+.btn {
+  display: block;
   border-radius: 30px;
-  width: 420px;
   text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #502198;
+  border: 2px solid #502198;
+  width: 280px;
+  padding: 16px;
+}
+
+.btn--size--xl {
+  padding: 30px;
+  width: 420px;
   font-size: 24px;
   font-weight: 700;
   line-height: 24px;
-  text-transform: uppercase;
   background-color: #502198;
   color: #ffffff;
 }
