--- a/css/blocks/hero.css
+++ b/css/blocks/hero.css
@@ -4,6 +4,7 @@
   background-color: rgba(222, 236, 221, 0.8);
   padding: 105px 0;
   min-height: calc(100vh - 187px);
+  margin: 0 0 60px;
 }
 
 .hero__wrapper {
