--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,6 @@
 @import "blocks/btn.css";
 @import "blocks/about-company.css";
 @import "blocks/aside-nav.css";
+@import "blocks/social.css";
+@import "blocks/footer.css";
+
